fix add funds button visibility

--- a/app/css/otp.styl
+++ b/app/css/otp.styl
@@ -95,6 +95,7 @@
   }
 
   &.show {
+    display: block;
     & + #otp-section {
       display: none;
     }
